--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,6 @@
+@import '~mdb-ui-kit/css/mdb.min.css';
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
- 
+  font-family: Roboto, Helvetica, Arial, sans-serif;
 }
 
 code {
@@ -14,4 +9,7 @@ code {
 }
 .Carousel{
   max-height: 500px;
+}
+body {
+  font-family: Roboto, Helvetica, Arial, sans-serif;
 }
